--- a/5-Lists.ipynb
+++ b/5-Lists.ipynb
@@ -250,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Adding elements to a list\n",
+    "#### 5.4.1 Adding elements to a list\n",
     "You can add elements to a list using the `append()` method. The `append()` method adds the element to the end of the list.\n",
     "\n",
     "```python    \n",
@@ -290,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Extending a list\n",
+    "#### 5.4.2 Extending a list\n",
     "You can add multiple elements to a list using the `extend()` method. The `extend()` method adds the elements of the list to the end of the list.\n",
     "\n",
     "```python\n",
@@ -341,7 +341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### List concatenation and duplication\n",
+    "#### 5.4.3 List concatenation and duplication\n",
     "You can concatenate two lists using the `+` operator. You can also duplicate a list using the `*` operator. \n",
     "\n",
     "Check the following examples:"
@@ -392,7 +392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The `in` and `not in` operators\n",
+    "#### 5.4.4 The `in` and `not in` operators\n",
     "You can check if an element is in a list using the `in` operator. You can also check if an element is not in a list using the `not in` operator.\n",
     "\n",
     "Examples:"
@@ -428,7 +428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### List methods\n",
+    "#### 5.4.5 List methods\n",
     "There are several methods that you can use with lists. We already encountered `append()` and `extend()`. Some of the other methods are: \n",
     "\n",
     "| Method     | Meaning |\n",
@@ -547,6 +547,186 @@
    "metadata": {},
    "source": [
     "Note that the `sort()` method **modifies the original list**, such as the `append()`, `extend()`, `insert()` and `remove()` methods."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.4.6 Exercises\n",
+    "\n",
+    "**Exercise 1**\n",
+    "\n",
+    "Start from the following list of with a mix of numbers and strings:\n",
+    "\n",
+    "```python\n",
+    "my_list = [1, \"apple\", 2, \"banana\", 3, \"cherry\"]\n",
+    "```\n",
+    "\n",
+    "1. Add the number 4 and the string \"date\" to the end of the list.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_list = [1, \"apple\", 2, \"banana\", 3, \"cherry\"]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Insert the string `orange` at index 3.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Remove the element `banana` from the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Find the index of the element `cherry`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 2**\n",
+    "\n",
+    "Use list **duplication** to create the following lists \n",
+    "```python\n",
+    "    L1 = ['a', 'b', 'c', 'a', 'b', 'c']\n",
+    "    L2 = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0] # 10 zeros\n",
+    "    L3 = [1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3]    \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L1 = \n",
+    "print(L1)\n",
+    "L2 = \n",
+    "print(L2)\n",
+    "L3 = \n",
+    "print(L3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 3**\n",
+    "\n",
+    "The letter frequency distribution of a word can be represented as a list of numbers, where the first element is the frequency of the letter 'a', the second element is the frequency of the letter 'b', and so on. For example, the letter frequency distribution of `Programming` is represented as:\n",
+    "```python\n",
+    "    letter_freq = [0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 2, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0]\n",
+    "```\n",
+    "\n",
+    "(1) Write a program that calculates the letter frequency distribution of a given word (ignore case).\n",
+    "\n",
+    "**Hints**: \n",
+    "* use the string method `lower()` to convert the text to lowercase.\n",
+    "* create a list with 26 zeros to store the letter frequencies (see previous exercise)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word = \"Programming\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(2) An **isogram** is a word in which no letter occurs more than once: e.g., `lumberjacks` and `background` are isograms, but `hello` and `programming` are not.\n",
+    "\n",
+    "Write a program that checks if a given word is an isogram."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word1 = \"Background\" # an isogram\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word2 = \"Programming\" # not an isogram\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(3) **(Challenging)** In most cases the letter frequency distribution of a word will contain many zeros. An alternative way to represent the letter frequency distribution is to use two lists: \n",
+    "* one list with the unique letters that occur in the word and \n",
+    "* a second list with the corresponding frequencies.\n",
+    "\n",
+    "For example, the letter frequency distribution of `Programming` can be represented as:\n",
+    "```python\n",
+    "    letters = [\"p\", \"r\", \"o\", \"g\", \"a\", \"m\", \"i\", \"n\"]\n",
+    "    freqs = [1, 1, 1, 2, 1, 1, 1, 2]\n",
+    "```\n",
+    "**Hints**: \n",
+    "* make your program case insensitive\n",
+    "* first create the list with the **unique** letters that occur in the word\n",
+    "* use techniques learned in previous chapters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word = \"Programming\""
    ]
   },
   {
