--- a/5-Lists.ipynb
+++ b/5-Lists.ipynb
@@ -563,7 +563,7 @@
     "my_list = [1, \"apple\", 2, \"banana\", 3, \"cherry\"]\n",
     "```\n",
     "\n",
-    "1. Add the number 4 and the string \"date\" to the end of the list.\n"
+    "1. **Add** the number 4 and the string \"date\" to the end of the list. Print the new list.\n"
    ]
   },
   {
@@ -580,7 +580,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Insert the string `orange` at index 3.\n"
+    "2. **Insert** the string `orange` at index 3. Print the new list.\n"
    ]
   },
   {
@@ -594,7 +594,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Remove the element `banana` from the list."
+    "3. **Remove** the element `banana` from the list. Print the new list."
    ]
   },
   {
@@ -608,7 +608,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Find the index of the element `cherry`.\n"
+    "4. **Find** the index of the element `cherry`.\n"
    ]
   },
   {
@@ -624,11 +624,11 @@
    "source": [
     "**Exercise 2**\n",
     "\n",
-    "Use list **duplication** to create the following lists \n",
+    "Use list **duplication** to create the following lists: \n",
     "```python\n",
     "    L1 = ['a', 'b', 'c', 'a', 'b', 'c']\n",
     "    L2 = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0] # 10 zeros\n",
-    "    L3 = [1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3]    \n",
+    "    L3 = [1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3]\n",
     "```"
    ]
   },
