Fix formatting in Exercise 3 description

--- a/1-TheBasics.ipynb
+++ b/1-TheBasics.ipynb
@@ -752,7 +752,7 @@
    "source": [
     "**Exercise 3**\n",
     "\n",
-    "Given a time in seconds, type in the cell below expressions to convert this time into hoursminutes and seconds. For example, 7865 seconds is 2 hours, 11 minutes and 5 seconds."
+    "Given a time in seconds, type in the cell below expressions to convert this time into hours, minutes and seconds. For example, 7865 seconds is 2 hours, 11 minutes and 5 seconds."
    ]
   },
   {
