--- a/2-BasicDatatypes.ipynb
+++ b/2-BasicDatatypes.ipynb
@@ -588,7 +588,7 @@
    "source": [
     "### Exercise 3\n",
     "\n",
-    "Consider the following string (typically part of a fasta file – the complete faste format is more extensive):\n",
+    "Consider the following string (typically part of a fasta file – the complete fasta format is more extensive):\n",
     "\n",
     ">MCHU - Calmodulin - Human, rabbit, bovine, rat, chicken\n",
     "MADQLTEEQIAEFKEAFSLFDKDGDGTITTKELGTVMRSLGQNPTEAELQDMINEVDADGNGTID\n",
