Fix wording in markdown cell for clarity

--- a/2-BasicDatatypes.ipynb
+++ b/2-BasicDatatypes.ipynb
@@ -641,7 +641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) Count the number of times the combination `AE` "
+    "(b) Count the number of times the combination `AE` occurs"
    ]
   },
   {
