--- a/7-FileI-O.ipynb
+++ b/7-FileI-O.ipynb
@@ -149,9 +149,9 @@
     "You can open a file using the `open()` function. The `open()` function takes two arguments:\n",
     "* the name of the file you want to open and\n",
     "* the mode in which you want to open the file. The mode can be \n",
-    "    * `'r'` for reading (default),\n",
-    "    * `'w'` for writing, or\n",
-    "    * `'a'` for appending. \n",
+    "    * `\"r\"` for reading (default),\n",
+    "    * `\"w\"` for writing, or\n",
+    "    * `\"a\"` for appending. \n",
     "\n",
     "The `open()` function returns a file object, which you can use to read from or write data to the file. Using a `for` loop, you can iterate over the lines of the file. "
    ]
@@ -212,9 +212,9 @@
     "##### 7.4.2 Built-in functions to read data from a file\n",
     "\n",
     "Python has several functions to read data from a file:\n",
-    "* `read()`: read the entire content of the file as a single string\n",
-    "* `readline()`: read one line of the file\n",
-    "* `readlines()`: read all lines of the file and store them in a list\n",
+    "* `read()`: read the entire content of the file as a **single string**\n",
+    "* `readline()`: read **one line** of the file\n",
+    "* `readlines()`: read **all lines** of the file and store them **in a list**\n",
     "\n",
     "To close the file, you can use the function `close()`.\n",
     "\n",
@@ -623,7 +623,12 @@
     "\n",
     "The text file `species.txt` in the `files` directory contains 7 scientific names, one per line. The scientific name of a species consists of two parts: the **genus** name and the **species** name. For example, `Bacillus anthracis`.\n",
     "\n",
-    "Write a program that reads the content of the file, extracts the genus names, and writes them to a new file called `genus.txt`, one genus name per line. The content of the file `genus.txt` should look like this:\n",
+    "Write a program that \n",
+    "1. reads the content of the file, \n",
+    "2. extracts the genus names, and \n",
+    "3. writes them to a new file called `genus.txt`, one genus name per line.\n",
+    "\n",
+    "The content of the file `genus.txt` should look like this:\n",
     "\n",
     "```\n",
     "Bacillus\n",
@@ -640,14 +645,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bacillus anthracis\n",
+      "\n",
+      "Pseudomonas aeruginosa\n",
+      "\n",
+      "Escherichia coli\n",
+      "\n",
+      "Actinobacter apis\n",
+      "\n",
+      "Moraxella catarrhalis\n",
+      "\n",
+      "Alkanindiges hongkongensis\n",
+      "\n",
+      "Perlucidibaca piscinae\n"
+     ]
+    }
+   ],
    "source": [
     "f = open(\"files/species.txt\", \"r\")\n",
+    "g = open(\"files/genus.txt\", \"w\")\n",
     "for line in f:\n",
     "    # add your code here\n",
-    "    \n",
+    "    print(line)\n",
+    "g.close()\n",
     "f.close()"
    ]
   },
@@ -776,7 +803,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
